--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.html
@@ -40,7 +40,7 @@
   </div>
 </nav>
 
-<h2 class="titulo2">Blogs</h2>
+<h2 class="titulos">Blogs</h2>
 
 <div class="noticias-container">
   <div *ngFor="let blog of blogs" class="instagram-div">
