--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-horarios/ver-horarios.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-horarios/ver-horarios.component.html
@@ -40,7 +40,7 @@
   </div>
 </nav>
 
-<h2 class="subtitulo mt-5">Horarios</h2>
+<h2 class="titulos">Horarios</h2>
 
 <div class="noticias-container">
   <div *ngFor="let horario of horarios" class="instagram-div">
