--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-actividad/ver-actividad.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-actividad/ver-actividad.component.html
@@ -39,7 +39,7 @@
         </ul>
   </div>
 </nav>
-<h2 class="subtitulo mt-5">Guias</h2>
+<h2 class="titulos">Actividades</h2>
 
 
 <div class="noticias-container">
@@ -47,8 +47,7 @@
     <h3 class="titulo">{{ guia.nombre }}</h3>
     <p class="date" style="font-size: 13px;"><strong>Fecha de Inicio:</strong> {{ guia.fechaInicio | date: 'dd/MM/yyyy' }}</p>
     <p class="date" style="font-size: 13px;"><strong>Fecha de Final: </strong>{{ guia.fechaFinal | date: 'dd/MM/yyyy' }}</p>
-    <button class="boton" onclick="">Descargar Archivo</button>
-    <p class="card-text"><strong>Comentario:</strong> {{ guia.comentario }}</p>
+    <button (click)="descargarArchivo(guia.urlImagen, guia.nombreArchivo)" type="button" class="btn btn-primary boton">Ver archivo</button>    <p class="card-text"><strong>Comentario:</strong> {{ guia.comentario }}</p>
     <p class="card-text"><strong>Publicado por:</strong>{{ guia.primerNombre }} {{ guia.primerApellido }}</p>
     
   </div>
