--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-asistencia/ver-asistencia.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-asistencia/ver-asistencia.component.scss
@@ -1,28 +1,142 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Protest+Riot&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0');
+@import url('https://fonts.googleapis.com/css2?family=Madimi+One&family=Oswald:wght@200..700&display=swap');
 
-.subtitulo{
-    color: #0a7775;
-    font-weight: bold;
-    text-align: center; 
+// GRAFICOS Y DEMAS 
+.titulos {
+  font-family: "Oswald", sans-serif;
+  font-size: 35px;
+  font-style: normal;
+  margin-top: 1.5%;
+  text-align: center;
+  margin-bottom: 25px;
+  color: #088a88;
 }
-.container {
-    background-color: #fff;
-    padding: 30px;
-    border-radius: 8px;
-    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
-    max-width: 500px;
-    width: 80%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+
+.titulos::after {
+  content: "";
+  display: block;
+  height: 1px;
+  background-color: #ddd;
+  margin: 10px 50px;
+}
+
+.chart-container {
+  margin-top: 2%;
+  display: flex;
+  justify-content: left;
+  flex-wrap: wrap;
+  
+
+}
+
+.graficoUno {
+  text-align: center;
+  width: 48%;
+}
+
+
+.chart {
+  border-radius: 8px;
+  padding: 20px;
+  margin: 10px;
+}
+
+
+@media (max-width: 1200px) {
+  .graficoUno {
+    width: 60%;
+  }
+}
+
+
+@media (max-width: 1000px) {
+  .graficoUno{
+    width: 75%;
+    margin: 0 auto;
+  }
+  
+
+  .chart-container {
+    justify-content: center;
+    flex-direction: column; /* Apilar los gráficos en pantallas más pequeñas */
+  }
+  .titulos {
+    margin-bottom: 15px;
+    font-size: 25px;
+    color: #088a88;
+  }
+}
+
+
+@media (max-width: 800px) {
+  .graficoUno {
+    width: 85%; /* Ocupar el 100% del ancho en pantallas más pequeñas */
+    margin: 0 auto;
+  }
+ 
+  .chart-container {
+    justify-content: center;
+    flex-direction: column; /* Apilar los gráficos en pantallas más pequeñas */
+  }
+  .titulos {
+    margin-bottom: 15px;
+    font-size: 20px;
+    color: #088a88;
+  }
+}
+
+@media (max-width: 625px) {
+  .graficoUno{
+    width: 100%; /* Ocupar el 100% del ancho en pantallas más pequeñas */
+    margin: 0 auto;
   }
 
- 
-/* Estilos Nav */
+  
+
+  .chart-container {
+    justify-content: center;
+    flex-direction: column; /* Apilar los gráficos en pantallas más pequeñas */
+  }
+  .titulos {
+    margin-bottom: 15px;
+    font-size: 20px;
+    color: #088a88;
+  }
+}
+
+@media (max-width: 480px) {
+  .graficoUno {
+    width: 100%; /* Ocupar el 90% del ancho en pantallas más pequeñas */
+    margin: 0 auto; /* Centrar */
+  }
+  
+  .chart-container {
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .chart h2 {
+    font-size: 18px; /* Tamaño de fuente más pequeño para títulos */
+  }
+}
+
+@media (min-width: 1800px) {
+  
+  .graficoUno{
+    width: 35%;
+  }
+
+  .chart-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+
+  }
+}
+
+
+// ESTILOS NAV 
 nav{
   background-color: #008a88;
 }
@@ -143,178 +257,4 @@ button {
   background-color: #070707;
 }
 
-@import url(https://fonts.googleapis.com/css?family=Roboto);
 
-.chart-container {
-  margin-top: 2%;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-
-}
-
-.graficoUno,
-.graficoDos {
-  text-align: center;
-  width: 48%;
-}
-
-.graficoTres,
-.graficoCuatro {
-  margin-top: 20px;
-  text-align: center;
-  width: 48%;
-}
-
-.chart {
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  padding: 20px;
-  margin: 10px;
-}
-
-.titulos {
-  margin-bottom: 25px;
-  font-size: 28px;
-  color: #088a88;
-}
-
-.titulos::after {
-  content: "";
-  display: block;
-  height: 1px;
-  background-color: #ddd;
-  margin: 8px 0;
-}
-
-@media (max-width: 1200px) {
-  .graficoUno,
-  .graficoDos {
-    width: 60%;
-  }
-  .graficoTres,
-.graficoCuatro {
-  margin-top: 20px;
-  text-align: center;
-  width: 58%;
-  }
-}
-
-
-@media (max-width: 1000px) {
-  .graficoUno,
-  .graficoDos {
-    width: 75%;
-    margin: 0 auto;
-  }
-  .graficoTres,
-  .graficoCuatro {
-    margin: 0 auto;
-    text-align: center;
-    width: 68%;
-  }
-
-  .chart-container {
-    justify-content: center;
-    flex-direction: column; /* Apilar los gráficos en pantallas más pequeñas */
-  }
-  .titulos {
-    margin-bottom: 15px;
-    font-size: 25px;
-    color: #088a88;
-  }
-}
-
-
-@media (max-width: 800px) {
-  .graficoUno,
-  .graficoDos {
-    width: 85%; /* Ocupar el 100% del ancho en pantallas más pequeñas */
-    margin: 0 auto;
-  }
-  .graficoTres,
-  .graficoCuatro {
-    margin: 0 auto;
-    text-align: center;
-    width: 78%;
-  }
-
-  .chart-container {
-    justify-content: center;
-    flex-direction: column; /* Apilar los gráficos en pantallas más pequeñas */
-  }
-  .titulos {
-    margin-bottom: 15px;
-    font-size: 20px;
-    color: #088a88;
-  }
-}
-
-@media (max-width: 625px) {
-  .graficoUno,
-  .graficoDos {
-    width: 100%; /* Ocupar el 100% del ancho en pantallas más pequeñas */
-    margin: 0 auto;
-  }
-
-  .graficoTres,
-  .graficoCuatro {
-    margin: 0 auto;
-    text-align: center;
-    width: 88%;
-  }
-
-  .chart-container {
-    justify-content: center;
-    flex-direction: column; /* Apilar los gráficos en pantallas más pequeñas */
-  }
-  .titulos {
-    margin-bottom: 15px;
-    font-size: 20px;
-    color: #088a88;
-  }
-}
-
-@media (max-width: 480px) {
-  .graficoUno,
-  .graficoDos {
-    width: 100%; /* Ocupar el 90% del ancho en pantallas más pequeñas */
-    margin: 0 auto; /* Centrar */
-  }
-  .graficoTres,
-  .graficoCuatro {
-    margin: 0 auto;
-    text-align: center;
-    width: 100%;
-  }
-
-  .chart-container {
-    justify-content: center;
-    flex-direction: column;
-  }
-
-  .chart h2 {
-    font-size: 18px; /* Tamaño de fuente más pequeño para títulos */
-  }
-}
-
-@media (min-width: 1800px) {
-  .graficoDos {
-    width: 45%; /* Limitar el ancho al 30% después de 1600px */
-  }
-  .graficoUno{
-    width: 35%;
-  }
-  .graficoTres{
-    width: 38%;
-  }
-  .graficoCuatro{
-    width: 38%;
-  }
-  .chart-container {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-
-  }
-}
