--- a/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.scss
@@ -1,13 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Protest+Riot&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Madimi+One&family=Oswald:wght@200..700&display=swap');
+
 
 .titulo {
     color: #008a88;
     font-weight: bold;
     text-align: left;
-    margin-left: 180px;
+    margin-left: 220px;
     margin-top: 10%;
-    font-family: "Outfit", sans-serif;
+    font-family: "Oswald", sans-serif;
     font-size: 46px;
     font-style: normal;
 }
@@ -19,9 +21,8 @@
     font-size: 20px;
 }
 .descripción {
-    font-size: medium;
-    font-weight: bold;
-    text-align: justify;
+    font-size: 17px;
+    text-align: center;
     margin-top: 15px;
     margin-left: 18%;
     width: 300px; 
@@ -29,11 +30,10 @@
 }
 
 .imagen {
-    margin-top: -250px;
+    margin-top: -230px;
     margin-left: 350px;
-    height: 450px;
-    width: 500px;
-    border-radius: 10px;
+    height: 350px;
+    width: 400px;
 }
 
 /* Estilos Nav */
@@ -157,7 +157,7 @@ button {
   background-color: #070707;
 }
 
- /*Resposive*/
+ // RESPONSIVE
 @media screen and (max-width: 600px) {
   .titulo {
       margin-left: 20%;
@@ -179,3 +179,54 @@ button {
       width: 80%;
   }
 }
+
+@media screen and (max-width: 850px) {
+  .titulo {
+      margin-left: 30%;
+      font-size: 300%;
+  }
+
+  .sub-titulo {
+      margin-left: 38%;
+      font-size: 200%;
+  }
+
+  .descripción {
+      margin-left: 34%;
+      text-align: center;
+  }
+
+  .imagen {
+      margin-top: -4vw;
+      margin-left: 18%;
+      height: 60%;
+      width: 70%;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .titulo {
+      margin-left: 20%;
+      font-size: 200%;
+  }
+
+  .sub-titulo {
+      margin-top: -4vw;
+      margin-left: 30%;
+      font-size: 150%;
+  }
+
+  .descripción {
+      margin-left: 5%;
+      font-size: 100%;
+      text-align: center;
+  }
+
+  .imagen {
+      margin-top: -17vw;
+      margin-left: 10%;
+      height: 70%;
+      width: 80%;
+  }
+}
+
