--- a/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.css
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.css
@@ -114,6 +114,13 @@ button {
   background-color: #008a88;
 }
 
+
+.dropdown-button {
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  background-color: #008a88;
+}
 .dropdown-item {
   padding: 10px;
   text-decoration: none;
@@ -128,7 +135,7 @@ button {
 /* CREAR BLOG */
 
 .container {
-  margin-top: 50px;
+  margin-top: 30px;
   box-shadow: 0 5px 9px rgba(5, 5, 5, 0.1);
   padding: 20px;
   background-color: #ffffff;
@@ -185,6 +192,7 @@ textarea {
   position: relative;
   overflow: hidden;
   outline: 2px solid white;
+  width: 200px;
 }
 
 .boton:hover {
@@ -227,8 +235,8 @@ textarea {
   margin-top: 20px;
   text-align: center;
   color: #088a88;
-  font-size: 25px;
-  margin-bottom: 20px;
+  font-size: 35px;
+  margin-bottom: 30px;
 }
 
 .blogs-container {
@@ -249,6 +257,7 @@ textarea {
   font-size: 1.2rem;
   color: #088a88;
   margin-bottom: 10px;
+  font-weight: bold;
 }
 
 .card-buttons {
@@ -386,9 +395,6 @@ textarea {
 }
 
 
-
-
-
 .btn-primary,
 .btn-secondary {
   color: #fff;
@@ -432,8 +438,6 @@ textarea {
   color: #252525;
 }
 
-
-
 .form-group {
   margin-bottom: 13px;
 }
@@ -453,13 +457,238 @@ textarea {
 }
 
 .button-container button {
-  margin: 0 5px;
+  margin: 0 15px;
 }
 
 .card-img-top {
-  max-width: 200px;
-  height: auto;
-  margin: 0 auto;
+  width: 235px;
+  height: 235px;
+  object-fit: cover;
 }
 
 
+.edit-button {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: rgb(20, 20, 20);
+  border: none;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
+  cursor: pointer;
+  transition-duration: 0.3s;
+  overflow: hidden;
+  position: relative;
+  text-decoration: none !important;
+}
+
+.edit-svgIcon {
+  width: 17px;
+  transition-duration: 0.3s;
+}
+
+.edit-svgIcon path {
+  fill: white;
+}
+
+.edit-button:hover {
+  width: 120px;
+  border-radius: 50px;
+  transition-duration: 0.3s;
+  background-color: #008a88;
+  align-items: center;
+}
+
+.edit-button:hover .edit-svgIcon {
+  width: 20px;
+  transition-duration: 0.3s;
+  transform: translateY(60%);
+  -webkit-transform: rotate(360deg);
+  -moz-transform: rotate(360deg);
+  -o-transform: rotate(360deg);
+  -ms-transform: rotate(360deg);
+  transform: rotate(360deg);
+}
+
+.edit-button::before {
+  display: none;
+  content: "Editar";
+  color: white;
+  transition-duration: 0.3s;
+  font-size: 2px;
+}
+
+.edit-button:hover::before {
+  display: block;
+  padding-right: 10px;
+  font-size: 13px;
+  opacity: 1;
+  transform: translateY(0px);
+  transition-duration: 0.3s;
+}
+
+.btnDelete {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: rgb(20, 20, 20);
+  border: none;
+  font-weight: 600;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
+  cursor: pointer;
+  transition-duration: 0.3s;
+  overflow: hidden;
+  position: relative;
+  gap: 2px;
+}
+
+.svgIcon {
+  width: 12px;
+  transition-duration: 0.3s;
+}
+
+.svgIcon path {
+  fill: white;
+}
+
+.btnDelete:hover {
+  transition-duration: 0.3s;
+  background-color: rgb(255, 69, 69);
+  align-items: center;
+  gap: 0;
+}
+
+.bin-top {
+  transform-origin: bottom right;
+}
+.btnDelete:hover .bin-top {
+  transition-duration: 0.5s;
+  transform: rotate(160deg);
+}
+
+
+@media (max-width: 600px) {
+  .lista-actividades .card {
+    width: 100%;
+  }
+}
+
+.btnCloud {
+  background-color: transparent;
+  position: relative;
+  fill: rgb(155, 153, 153);
+  border: none;
+}
+
+.btnCloud::after {
+  content: 'GUARDAR';
+  position: absolute;
+  top: -50%;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #fff;
+  padding: 3px 9px;
+  border-radius: 5px;
+  transition: 200ms linear;
+  transition-delay: 200ms;
+  color: black;
+  font-size: 13px;
+  visibility: hidden;
+}
+
+.icon {
+  transform: scale(1.4);
+  transition: 200ms linear;
+}
+
+.btnCloud:hover > .icon {
+  transform: scale(1.7);
+}
+
+.btnCloud:hover > .icon path {
+  fill: #92c5FC;
+  cursor: pointer;
+}
+
+.btnCloud:hover::after {
+  visibility: visible;
+  opacity: 1;
+  top: -100%;
+}
+
+.cancel {
+  position: relative;
+  width: 35px;
+  height: 35px;
+  border: none;
+  background:rgb(155, 153, 153);
+  border-radius: 50%;
+  transition: background 0.5s;
+}
+
+.X {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 2em;
+  height: 1.3px;
+  background-color: rgb(255, 255, 255);
+  transform: translateX(-50%) rotate(45deg);
+}
+
+.Y {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 2em;
+  height: 1.3px;
+  background-color: #fff;
+  transform: translateX(-50%) rotate(-45deg);
+}
+
+.close {
+  position: absolute;
+  display: flex;
+  padding: 0.8rem 1.5rem;
+  align-items: center;
+  justify-content: center;
+  transform: translateX(-50%);
+  top: -70%;
+  left: 50%;
+  width: 6em;
+  height: 1.7em;
+  font-size: 12px;
+  background-color: #fff;
+  color: black;
+  border: none;
+  border-radius: 3px;
+  pointer-events: none;
+  opacity: 0;
+}
+
+.cancel:hover {
+  background-color: rgb(211, 21, 21);
+}
+
+.cancel:active {
+  background-color: rgb(130, 0, 0);
+}
+
+.cancel:hover > .close {
+  animation: close 0.2s forwards 0.25s;
+}
+
+@keyframes close {
+  100% {
+    opacity: 1;
+  }
+}
