--- a/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.html
@@ -91,8 +91,8 @@
     <div class="form-group">
       <label for="imagenOpcional">Imagen:</label>
       <input type="file" class="form-control" id="imagenOpcional" name="imagenOpcional" (change)="onFileSelected($event)" />
-    </div>  
-    <button type="submit" class="boton">Crear Blog</button>  
+    </div>
+    <button type="submit" class="boton">Crear Blog</button>
   </form>
 </div>
 
@@ -193,16 +193,30 @@
                     required
                   ></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">
-                  Actualizar Blog
-                </button>
-                <button
-                  type="button"
-                  class="btn-cancelar"
-                  (click)="cancelEdit()"
-                >
-                  Cancelar
-                </button>
+
+                <div class="button-container">
+
+
+                  <button type="submit" class="btnCloud">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="30" height="30" class="icon"><path d="M22,15.04C22,17.23 20.24,19 18.07,19H5.93C3.76,19 2,17.23 2,15.04C2,13.07 3.43,11.44 5.31,11.14C5.28,11 5.27,10.86 5.27,10.71C5.27,9.33 6.38,8.2 7.76,8.2C8.37,8.2 8.94,8.43 9.37,8.8C10.14,7.05 11.13,5.44 13.91,5.44C17.28,5.44 18.87,8.06 18.87,10.83C18.87,10.94 18.87,11.06 18.86,11.17C20.65,11.54 22,13.13 22,15.04Z"></path></svg>
+                  </button>
+
+                  <button
+                    type="button"
+                    class="cancel"
+                    (click)="cancelEdit()"
+                  >
+                  <span class="X"></span>
+                  <span class="Y"></span>
+                  <div class="close">CANCELAR</div>
+                  </button>
+
+
+                </div>
+
+
+
+
               </form>
             </div>
           </div>
